fix: cta-contribute dark mode

--- a/src/scss/components/_cta-contribute.scss
+++ b/src/scss/components/_cta-contribute.scss
@@ -5,15 +5,32 @@
     padding: 30px;
 
     &__link {
-        background-color: var(--color-stroke);
-        color: var(--color-primary-shade);
+        background-color: var(--color-action-bg);
+        color: var(--color-action-text);
         padding: .5rem;
-        border-radius: 5px;
         display: inline-block;
         width: 30%;
         text-align: center;
         margin-top: 1rem;
         margin-right: 1rem;
         text-decoration: none;
+
+        &:hover,
+        &:focus {
+          filter: brightness(1.2);
+        }
+        
+        &:focus:hover {
+          outline: none;
+        }
+        
+        &:focus:not(:hover) {
+          outline: 1px solid var(--color-action-text);
+          outline-offset: -4px;
+        }
+        
+        &:active {
+          transform: scale(0.99);
+        }
     }
 }
